--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
 
 {% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    {% load staticfiles %}
     <script src="{% static 'demo/scripts/script.js' %}"></script>
 </body>
 </html>
